examples/codegen/effects/panic.an
effect Fail with
    fail: fn Unit -> a

effect Read a with
    read: fn Unit -> a

read_or_none (f: fn Unit -> Unit can Read a, Fail): Maybe a =
    handle Some (f ())
    | fail () -> None
    | read () -> resume ()

main () = ()

// panic.an:8:12	error: 
// thread 'main' panicked at src/error/mod.rs:342:17:
// internal error: entered unreachable code: This type error should never be shown. Expected can Fail, Read b, a, Actual pure
// note: run with `RUST_BACKTRACE=1` environment variable to display a backtrace
// exit 101

// expected exit status: 1
// expected stderr:
// examples/codegen/effects/panic.an:7:18
//   | // error: Expected 0 arguments but found 1
// 7 | read_or_none (f: fn Unit -> Unit can Read a, Fail): Maybe a =
// 8 |     handle Some (f ())
// 
// examples/codegen/effects/panic.an:7:18
//   | // error: Expected a type constructor of kind effect, but found one of kind *
// 7 | read_or_none (f: fn Unit -> Unit can Read a, Fail): Maybe a =
// 8 |     handle Some (f ())
// 
// examples/codegen/effects/panic.an:7:18
// 7 | read_or_none (f: fn Unit -> Unit can Read a, Fail): Maybe a =	// error: Fail is not a type
// 8 |     handle Some (f ())
// 
// examples/codegen/effects/panic.an:7:18
// 7 | read_or_none (f: fn Unit -> Unit can Read a, Fail): Maybe a =	// error: Read is not a type
// 8 |     handle Some (f ())
// 
// examples/codegen/effects/panic.an:8:5
//  7 | read_or_none (f: fn Unit -> Unit can Read a, Fail): Maybe a =
//  8 |     handle Some (f ())	// error: Effects and handle expressions are currently unimplemented
//  9 |     | fail () -> None
// 
// Found 5 errors and 0 warnings

